# strangevis-moviemaker

./: .gitignore  README.md  fileformat.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
qt-app/strangevis-moviemaker/: Renderer.cpp  Renderer.h  Toolbox.cpp  Toolbox.h  colorSlot.cpp  colorSlot.h  cube.cpp  cube.h  customSlider.cpp  customSlider.h  histogram.cpp  histogram.h  histogramChartView.cpp  histogramChartView.h  interpolation.cpp  interpolation.h  keyframeHandler.cpp  keyframeHandler.h  keyframes.cpp  keyframes.h  layer.cpp  layer.h  layerHandler.cpp  layerHandler.h  main.cpp  model.cpp  model.h  phasefunction.cpp  phasefunction.h  strangevis-moviemaker.pri  strangevis-moviemaker.pro  strangevis-moviemaker.sln  strangevis-moviemaker.vcxproj  strangevis-moviemaker.vcxproj.filters  strangevismoviemaker.cpp  strangevismoviemaker.h  strangevismoviemaker.qrc  strangevismoviemaker.ui  styling.qss  transferFunction.cpp  (+1 more)
qt-app/strangevis-moviemaker/Shaders/: fragmentShader.glsl  raycast-fs.glsl  raycast-vs.glsl  vertexShader.glsl
qt-app/strangevis-moviemaker/StyleSheets/: blue_slider.qss  general_slider.qss  green_slider.qss  red_slider.qss  sliderStyle.qss
qt-app/strangevis-moviemaker/states/: hand_state.txt  hand_state_01.txt  hand_state_02.txt  hand_state_03.txt  hand_state_04.txt  hand_state_1.txt  hand_state_2.txt  hand_state_3.txt  sinusveins_state_04.txt  sinusveins_state_05.txt  sinusveins_state_06.txt  sinusveins_state_07.txt  (+4 more)
strangevis-moviemaker/: CMakeLists.txt  main.cpp  strangevis-moviemaker.cpp  strangevis-moviemaker.h
(+1 files in other folders)
