# CMakeList.txt : CMake project for strangevis-moviemaker, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("strangevis-moviemaker")

# Add source to this project's executable.
add_executable (strangevis-moviemaker "main.cpp")
#add_executable (strangevis-moviemaker "strangevis-moviemaker.cpp" "strangevis-moviemaker.h")

# TODO: Add tests and install targets if needed.
